--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "vim/bundle/clones-vim-l9"]
 	path = vim/bundle/clones-vim-l9
 	url = git@github.com:clones/vim-l9.git
+[submodule "vim/bundle/file-line"]
+	path = vim/bundle/file-line
+	url = git@github.com:vim-scripts/file-line.git
