--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vim/bundle/file-line"]
 	path = vim/bundle/file-line
 	url = git@github.com:vim-scripts/file-line.git
+[submodule "vim/bundle/skwp-vim-powerline"]
+	path = vim/bundle/skwp-vim-powerline
+	url = git@github.com:skwp/vim-powerline.git
