--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "vim/bundle/lunaru-vim-less"]
 	path = vim/bundle/lunaru-vim-less
 	url = git@github.com:lunaru/vim-less.git
+[submodule "vim/bundle/kchmck-vim-coffee-script"]
+	path = vim/bundle/kchmck-vim-coffee-script
+	url = git@github.com:kchmck/vim-coffee-script.git
